--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <meta name="author" content="Eirik Hanssen">
     <title>NOVA extractor</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="script.js"></script>
   </head>
   <body>
-  
+  	<h1>NOVA extractor</h1>
+	<main></main>
   </body>
 </html>
